fix url, add placeholder on forms and tweak overlay layout on mobile

--- a/app/assets/stylesheets/components/_loader.scss
+++ b/app/assets/stylesheets/components/_loader.scss
@@ -11,8 +11,6 @@
 #loader {
   display: none;
   position: absolute;
-  margin: 0 auto;
-  z-index: 1;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -30,5 +28,4 @@
 #loader img {
   width: 100vw;
   height: 100vh;
-  padding: 0;
 }
