--- a/app/assets/stylesheets/components/_overlay.scss
+++ b/app/assets/stylesheets/components/_overlay.scss
@@ -14,3 +14,10 @@
   width: 100vw;
   height: 100vh;
 }
+
+@media screen and (max-width: 414px) {
+  #overlay img{
+    width: 90vw;
+    height: 100vh;
+  }
+} 
